--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
-cloud:
-    aws:
-      credentials:
-      access-key: ${CLOUD_AWS_ACCESS_KEY}
-      secret-key: ${CLOUD_AWS_SECRET_KEY}
+spring:
+  config:
+    import: optional:file:.env.properties
+
+logging:
+  level:
+    org.springframework.web: DEBUG
+    org.springframework.http.converter: DEBUG
