--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,17 @@
 spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/promesa
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+
   config:
     import: optional:file:.env.properties
 
