--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	implementation 'software.amazon.awssdk:s3'
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
+	//h2
+	runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
