--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,21 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/promesa
+    url:  jdbc:h2:file:./data/promesa-db
     username: sa
     password:
     driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
+    defer-datasource-initialization: true
+  sql:
+    init:
+      data-locations: classpath:data.sql
+      mode: always
 
   config:
     import: optional:file:.env.properties
