--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,14 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// OAuth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+	// LocalDateTime 직렬화/역직렬화용
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 }
 
 // gradle clean 시에 QClass 디렉토리 삭제
