--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url:  jdbc:h2:file:./data/promesa-db
+    url:  jdbc:h2:tcp://localhost/~/promesa
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -20,7 +20,31 @@ spring:
   config:
     import: optional:file:.env.properties
 
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 7643970cb5bdb570ac7c688d2c6ea85e
+            client-secret: ""
+            redirect-uri: http://localhost:8085/login/oauth2/code/kakao
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            scope: profile_nickname, profile_image
+            client-name: Kakao
+
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
 logging:
   level:
     org.springframework.web: DEBUG
     org.springframework.http.converter: DEBUG
+
+
+server:
+  port: 8085
