--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,58 +10,73 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    env:
+      AWS_REGION: ap-northeast-2
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      ECR_REPOSITORY: promesa-repo
+    
     steps:
+      # 1) 코드 체크아웃
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Cache Gradle
-        uses: actions/cache@v3
+      # 2) AWS 자격증명 설정
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+      
+      # 3) JDK 17 설치 & Gradle 빌드
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Gradle Build Run
+      - name: Gradle Build Run (skip tests)
         run: ./gradlew build -x test
 
+      # 4) Docker 이미지 빌드
       - name: Build Docker image
-        run: docker build -t yourdockerhub/promesa:${{ github.sha }} .
-
-      - name: Login to DockerHub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Push Docker image
         run: |
-          docker tag yourdockerhub/promesa:${{ github.sha }} yourdockerhub/promesa:latest
-          docker push yourdockerhub/promesa:${{ github.sha }}
-          docker push yourdockerhub/promesa:latest
-
-      - name: Connecting to AWS
-        uses: aws-actions/configure-aws-credentials@v1
+          IMAGE_TAG=${{ github.sha }}
+          # Dockerfile이 있는 디렉터리(프로젝트 최상위)에 따라 경로를 지정
+          docker build -t promesa:${IMAGE_TAG} .
+          docker tag promesa:${IMAGE_TAG} promesa:latest
+          
+      # 5) ECR 로그인 (Docker CLI용 토큰)
+      - name: ECR Login
+        uses: aws-actions/amazon-ecr-login@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          region: ${{ env.AWS_REGION }}
 
+      # 6) Docker 이미지 Tag & Push to ECR
+      - name: Tag and Push to ECR
+        run: |
+          IMAGE_TAG=${{ github.sha }}
+          ECR_REGISTRY=${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+          # 1) SHA 태그로 tag & push
+          docker tag promesa:${IMAGE_TAG} ${ECR_REGISTRY}/${{ env.ECR_REPOSITORY }}:${IMAGE_TAG}
+          docker push ${ECR_REGISTRY}/${{ env.ECR_REPOSITORY }}:${IMAGE_TAG}
+
+          # 2) latest 태그로도 tag & push
+          docker tag promesa:latest ${ECR_REGISTRY}/${{ env.ECR_REPOSITORY }}:latest
+          docker push ${ECR_REGISTRY}/${{ env.ECR_REPOSITORY }}:latest
+          
+      # 7) 앱팩(AppSpec) 및 스크립트(예: scripts/)를 ZIP으로 묶기
       - name: Zip for CodeDeploy
         run: |
           zip -r latest.zip appspec.yml scripts/
 
+      # 8) S3로 ZIP 업로드
       - name: Upload to S3
         run: |
           aws s3 cp \
             latest.zip s3://ceos-promesa/latest.zip
 
+      # 9) CodeDeploy 배포 요청
       - name: Request to CodeDeploy
         run: |
           aws deploy create-deployment \
