--- a/appspec.yml
+++ b/appspec.yml
@@ -1,32 +1,23 @@
 version: 0.0
-
 os: linux
 
-files:
-  # GitHub Actions가 S3에 올린 ZIP(루트 경로: .env, build/libs/*.jar, scripts/ 등)을
-  # /home/ubuntu/app 디렉토리에 풀어 줍니다.
-  - source: /
-    destination: /home/ubuntu/app      # 프로젝트 “기본 경로”를 /home/ubuntu/app 으로 설정
-    overwrite: yes
-
-file_exists_behavior: OVERWRITE
-
-permissions:
-  # /home/ubuntu/app 이하의 모든 파일을 ubuntu:ubuntu 소유로 설정합니다.
-  - object: /
-    pattern: "**"
-    owner: ubuntu
-    group: ubuntu
-
 hooks:
-  # 애플리케이션 시작 단계에서, .env를 로드하고 Spring Boot를 구동하는 스크립트를 실행합니다.
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: ubuntu
+
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: ubuntu
+
   ApplicationStart:
-    - location: scripts/run_new_was.sh
-      timeout: 180
+    - location: scripts/start_app.sh
+      timeout: 300
       runas: ubuntu
-    - location: scripts/health_check.sh
-      timeout: 180
-      runas: ubuntu
-    - location: scripts/switch.sh
-      timeout: 180
+
+  ApplicationStop:
+    - location: scripts/stop_app.sh
+      timeout: 300
       runas: ubuntu
