--- a/appspec.yml
+++ b/appspec.yml
@@ -5,8 +5,8 @@ files:
   - source: scripts/
     destination: /home/ubuntu/app/scripts/
 
-  - source: build/libs/app.jar
-    destination: /home/ubuntu/app/app.jar
+  - source: build/libs/promesa-0.0.1-SNAPSHOT.jar
+    destination: /home/ubuntu/app/promesa-0.0.1-SNAPSHOT.jar
 
 hooks:
   BeforeInstall:
