--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,7 +78,7 @@ jobs:
       # 7) 앱팩(AppSpec) 및 스크립트(예: scripts/)를 ZIP으로 묶기
       - name: Zip for CodeDeploy
         run: |
-          zip -r latest.zip appspec.yml build/libs/*.jar scripts/
+          zip -r latest.zip appspec.yml build/libs/promesa-0.0.1-SNAPSHOT.jar scripts/
 
       # 7.1) (디버그) ZIP 내부 확인하기
       - name: List contents of latest.zip
