fix: chmod 권한 문제 해결

--- a/appspec.yml
+++ b/appspec.yml
@@ -12,19 +12,19 @@ hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
 
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
 
   ApplicationStart:
     - location: scripts/start_app.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
 
   ApplicationStop:
     - location: scripts/stop_app.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
