--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,12 @@ jobs:
       AWS_REGION: ap-northeast-2
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       ECR_REPOSITORY: promesa-repo
+
+      RDS_URL:       ${{ secrets.RDS_URL }}
+      RDS_USERNAME:  ${{ secrets.RDS_USERNAME }}
+      RDS_PASSWORD:  ${{ secrets.RDS_PASSWORD }}
+      REDIS_HOST:    ${{ secrets.REDIS_HOST }}
+      REDIS_PORT:    ${{ secrets.REDIS_PORT }}
     
     steps:
       # 1) 코드 체크아웃
@@ -75,24 +81,34 @@ jobs:
           docker tag promesa:latest ${ECR_REGISTRY}/${{ env.ECR_REPOSITORY }}:latest
           docker push ${ECR_REGISTRY}/${{ env.ECR_REPOSITORY }}:latest
           
-      # 7) 앱팩(AppSpec) 및 스크립트(예: scripts/)를 ZIP으로 묶기
+      # 7) start_app.sh 안의 플레이스홀더를 실제 Secret 값으로 치환
+      - name: Replace placeholders in start_app.sh
+        run: |
+          # 실제로 start_app.sh 파일 내부에 <<RDS_URL>>, <<RDS_USERNAME>> 등으로 작성해 두어야 합니다.
+          sed -i "s|<<RDS_URL>>|${{ env.RDS_URL }}|g" scripts/start_app.sh
+          sed -i "s|<<RDS_USERNAME>>|${{ env.RDS_USERNAME }}|g" scripts/start_app.sh
+          sed -i "s|<<RDS_PASSWORD>>|${{ env.RDS_PASSWORD }}|g" scripts/start_app.sh
+          sed -i "s|<<REDIS_HOST>>|${{ env.REDIS_HOST }}|g" scripts/start_app.sh
+          sed -i "s|<<REDIS_PORT>>|${{ env.REDIS_PORT }}|g" scripts/start_app.sh
+      
+      # 8) 앱팩(AppSpec) 및 스크립트(예: scripts/)를 ZIP으로 묶기
       - name: Zip for CodeDeploy
         run: |
           zip -r latest.zip appspec.yml build/libs/promesa-0.0.1-SNAPSHOT.jar scripts/
 
-      # 7.1) (디버그) ZIP 내부 확인하기
+      # 8.1) (디버그) ZIP 내부 확인하기
       - name: List contents of latest.zip
         run: |
           echo "🔍 ZIP 내부 파일 목록:"
           unzip -l latest.zip
 
-      # 8) S3로 ZIP 업로드
+      # 9) S3로 ZIP 업로드
       - name: Upload to S3
         run: |
           aws s3 cp \
             latest.zip s3://ceos-promesa/latest.zip
 
-      # 9) CodeDeploy 배포 요청
+      # 10) CodeDeploy 배포 요청
       - name: Request to CodeDeploy
         run: |
           aws deploy create-deployment \
