--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
 
     # GitHub Secrets에서 값을 가져와서 env로 미리 매핑
     env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION:      ap-northeast-2
       AWS_ACCOUNT_ID:  ${{ secrets.AWS_ACCOUNT_ID }}
       ECR_REPOSITORY:  promesa-repo
@@ -39,7 +41,7 @@ jobs:
         with:
           aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region:            ${{ env.AWS_REGION }}
+          aws-region:            ap-northeast-2
 
       # 4) JDK 17 설치 & Gradle 빌드 (테스트 제외)
       - name: Set up JDK 17
