--- a/appspec.yml
+++ b/appspec.yml
@@ -8,6 +8,9 @@ files:
   - source: build/libs/promesa-0.0.1-SNAPSHOT.jar
     destination: /home/ubuntu/app/promesa-0.0.1-SNAPSHOT.jar
 
+  - source: .env
+    destination: /home/ubuntu/app/
+
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
