--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,16 +90,12 @@ jobs:
       # .env 파일 생성
       - name: Create .env file
         run: |
-          cat > .env <<EOF
-          RDS_URL=${{ secrets.RDS_URL }}
-          RDS_USERNAME=${{ secrets.RDS_USERNAME }}
-          RDS_PASSWORD=${{ secrets.RDS_PASSWORD }}
-          REDIS_HOST=${{ secrets.REDIS_HOST }}
-          REDIS_PORT=${{ secrets.REDIS_PORT }}
-          AWS_REGION=ap-northeast-2
-          AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          EOF
+          echo "RDS_URL=${{ secrets.RDS_URL }}"         >> .env
+          echo "RDS_USERNAME=${{ secrets.RDS_USERNAME }}" >> .env
+          echo "RDS_PASSWORD=${{ secrets.RDS_PASSWORD }}" >> .env
+          echo "REDIS_HOST=${{ secrets.REDIS_HOST }}"     >> .env
+          echo "REDIS_PORT=${{ secrets.REDIS_PORT }}"     >> .env
+          echo "AWS_REGION=ap-northeast-2"                >> .env
 
       # 9) AppSpec, JAR, 스크립트 폴더를 ZIP으로 묶기
       - name: Zip for CodeDeploy
