--- a/appspec.yml
+++ b/appspec.yml
@@ -13,6 +13,9 @@ files:
 
 hooks:
   BeforeInstall:
+    - location: scripts/clean_env.sh
+    - runas: root
+
     - location: scripts/before_install.sh
       timeout: 300
       runas: root
