--- a/appspec.yml
+++ b/appspec.yml
@@ -14,7 +14,8 @@ files:
 hooks:
   BeforeInstall:
     - location: scripts/clean_env.sh
-    - runas: root
+      timeout: 300
+      runas: root
 
     - location: scripts/before_install.sh
       timeout: 300
