fix: nginx 502 오류 해결을 위한 actuator health 노출 설정 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -25,3 +25,12 @@ logging:
   level:
     # 운영에서는 SQL 로그는 꺼 둠
     org.hibernate.SQL: WARN
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
