블루/그린 배포 방식 개선 및 무중단 전환 로직 구현 - switch.sh에서 헬스체크 후 Nginx 포트 스위칭 - start_app.sh로 새로운 포트에 컨테이너 실행

--- a/appspec.yml
+++ b/appspec.yml
@@ -6,6 +6,8 @@ files:
     destination: /home/ubuntu/app/scripts/
 
 hooks:
+  ApplicationStop: []
+
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
@@ -18,10 +20,5 @@ hooks:
 
   ApplicationStart:
     - location: scripts/switch.sh
-      timeout: 300
-      runas: root
-
-  ApplicationStop:
-    - location: scripts/stop_app.sh
       timeout: 300
       runas: root
