fix: jar파일을 스크립트에 포함

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,6 +67,7 @@ jobs:
 
       - name: Zip for CodeDeploy
         run: |
+          cp build/libs/*.jar scripts/
           zip -r latest.zip \
             appspec.yml \
             scripts/
