--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,13 @@ dependencies {
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	// JJWT core
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+
+	// JJWT implementation dependencies
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // for JSON parsing
 }
 
 // gradle clean 시에 QClass 디렉토리 삭제
