refactor: env 파일 반영되도록 수정

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ dependencies {
 	// JJWT implementation dependencies
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // for JSON parsing
+
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 }
 
 // gradle clean 시에 QClass 디렉토리 삭제
