--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-      JWT_SECRET: ${{ secrets.JWT_SECRET }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3 # clone repository
@@ -43,12 +40,18 @@ jobs:
       - name: Gradle Authorization
         run: chmod +x gradlew
 
+      # Create .env.properties from secrets
+      - name: Create .env.properties
+        run: |
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" > .env.properties
+
       # Gradle run (application-test.yml 환경설정으로 빌드하기 위해 -Dspring.profiles.active 옵션 추가)
       - name: Gradle Build Run
-        run: ./gradlew -Dspring.profiles.active=test -DJWT_SECRET="${{ secrets.JWT_SECRET }}" build
+        run: ./gradlew -Dspring.profiles.active=test build
 
+      # Gradle test
       - name: Test with Gradle
-        run: ./gradlew -Dspring.profiles.active=test -DJWT_SECRET="${{ secrets.JWT_SECRET }}" --info test
+        run: ./gradlew -Dspring.profiles.active=test --info test
 
       # Publish Unit Test Results
       - name: Publish Unit Test Results
