feat: JWT_SECRET 없을 경우 테스트 생략

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
             user-name-attribute: id
 
 jwt:
-  secret: ${JWT_SECRET}
+  secret: ${JWT_SECRET:dummy} # WT_SECRET 없으면 dummy 삽입
   access-token-expiration: 3600000 # 1시간
   header: Authorization
 
