--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,8 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
-  access-token-expiration: 3600000 # 1시간
+  access-token-expiration: 60000       # 1분 (ms)
+  refresh-token-expiration: 86400000    # 1일 (ms)
   header: Authorization
 
 logging:
