--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -6,6 +6,11 @@ spring:
     username: sa
     password:
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
