--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
+	implementation("org.openapitools:jackson-databind-nullable:0.2.4")
 
 	// s3
 	implementation platform('software.amazon.awssdk:bom:2.20.56')
